# JetSCI

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
src/jetsci/: __init__.py  lifecycle.py  mat_func_conversions.py  options.py  solve.py  vec_func_conversions.py
src/jetsci/conversions/: __init__.py  mat_func_conversions.py
src/jetsci/petsc_ksp/: __init__.py  linear_methods.py  options.py  solver_call_methods.py
src/jetsci/petsc_ksp/_primitives/: __init__.py  buildKSP_Keith.py  differentiateKSP_Keith.py  runKSP_Keith.py
src/jetsci/petsc_snes/: __init__.py  construction_build.py  construction_logic.py  primitives.py  primitives_backup.py  solver.py  solver_lifecycle.py
src/jetsci/tests/: test_differentiable_solve.py  test_snes_differentiation_primitive.py
